k8s/feed-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-api-deploy
  namespace: udagram
spec:
  selector:
    matchLabels:
      app: feed-api
  template:
    metadata:
      labels:
        app: feed-api
    spec:
      containers:
        - name: feed-api
          image: amorimdub/udagram-feed-api:latest
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: feed-api-svc
  namespace: udagram
spec:
  selector:
    app: feed-api
  ports:
    - port: 8080
  type: ClusterIP
