k8s/user-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deploy
  namespace: udagram
spec:
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: amorimdub/udagram-user-api:latest
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: user-api-svc
  namespace: udagram
spec:
  selector:
    app: user-api
  ports:
    - port: 8080
  type: ClusterIP
