k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
  namespace: udagram
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: amorimdub/udagram-web:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: web-svc
  namespace: udagram
spec:
  selector:
    app: web
  ports:
    - port: 80
  type: ClusterIP
